--- a/index (2).html
+++ b/index (2).html
@@ -57,7 +57,7 @@
           </ul>
         </section>
       <section>
-        <ul class="list list-images">
+        <ul class="list">
           <li>
             <img src="./images/img-1.png" alt="Веб-сайт" width="370" />
             <h2 class="title-images">Технокряк</h2>
